# mini-dayscool

./: README.md  docker-compose.yml
api_getway/DayscoolAPI/: Dockerfile  package.json
api_getway/DayscoolAPI/src/: graphQLSchema.js  graphQLSchema.js~
api_getway/DayscoolAPI/src/dayscool/: getway.js  index.html
api_getway/DayscoolAPI/src/dayscool/abac/: resolvers.js  resolvers.js~  server.js  typeDefs.js  typeDefs.js~
api_getway/DayscoolAPI/src/dayscool/activities/: graphiql petitions activities  resolvers.js  server.js  typeDefs.js
api_getway/DayscoolAPI/src/dayscool/authentication/: graphiql petitions user  resolvers.js  (+2 more)
back-end/ms_authentication/: README.md
back-end/ms_authentication/demo/: Dockerfile  pom.xml
back-end/ms_cursos/: .env  Cargo.toml  Dockerfile  Rocket.toml
back-end/ms_cursos/migrations/2020-09-23-213630_create_cursos/: down.sql  up.sql
back-end/ms_cursos/migrations/2020-09-24-164538_create-person/: down.sql  up.sql
back-end/ms_cursos/migrations/2020-09-24-164546_create-reminder/: down.sql  up.sql
back-end/ms_cursos/migrations/2020-09-25-194014_crear-archivos/: down.sql  up.sql
back-end/ms_cursos/src/: controlers.rs  database.rs  main.rs
back-end/ms_cursos/src/controlers/: alumno.rs  archivo.rs  curso.rs  reunion.rs
back-end/ms_cursos/src/controlers/src/: schema.rs
back-end/ms_cursos/src/database/: querys.rs
back-end/ms_cursos/src/models/: alumno.rs  archivo.rs  curso.rs  reunion.rs
back-end/ms_user/: Dockerfile  README.md  docker-compose.yml  pom.xml
back-end/ms_user/ms_user_generator/: ms_user_generator.sql
(+25 files in other folders)
